feat(EntityRadar): Reuse Peripheral on BlockEntity (PR #2)